Added the about us in home nav

--- a/public/home/Home.html
+++ b/public/home/Home.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="homenew.css">
 
 <!------Swiper js-->
 <link
@@ -31,7 +31,7 @@
             <ul class="nav_menu">
             
                 <li><a href="Home.html">Home</a></li>
-                <!-- <li><a href="about.html">About</a></li> -->
+                <li><a href="about.html">About</a></li>
                 <li><a href="../clubPage/clubPage.html">Clubs</a></li>
                 <li><a href="../eventpage/index.html">Events</a></li>
                 <li><a href="Contact.html">Contact</a></li>
@@ -271,9 +271,9 @@
 <!--=================END OF FAQS=================-->
 
 
+<!-- ================Team Setion============= -->
 
-
-<section class="container testimonials_container mySwiper">
+<!-- <section class="container testimonials_container mySwiper">
     <h2>Team Members</h2>
     <div CLASS="swiper-wrapper">
         <article class="testimonial swiper-slide">
@@ -367,7 +367,7 @@
         </article>
     </div>
     <div class="swiper-pagination"></div>
-</section>
+</section> -->
 
 
 
