Modified home page

--- a/public/home/Home.html
+++ b/public/home/Home.html
@@ -73,11 +73,11 @@
     <section class="categories">
         <div class="container categories_container">
             <div class="categories_left">
-                <h1>Categories</h1>
-                <p>
+                <h1 class="Cat-h1" style="text-align: center;">Categories</h1>
+                <h4 style="text-align: center;">
                     The simplest way to host all your events
-                </p>
-                <a href="#" class="btn">Learn More</a>
+                </h4>
+                <!-- <a href="#" class="btn">Learn More</a> -->
             </div>
             <div class="categories_right">
                 <article class="category">
@@ -127,8 +127,8 @@
 
 <!--==================END OF CATEGORIES================-->
 
-<section class="events">
-    <h2>OUR POPULAR EVENTS</h2>
+<section class="events" style="margin-top: 0;">
+    <h2 style="font-size: 50px;">OUR POPULAR EVENTS</h2>
     <div class="container events_container">
         <article class="event">
             <div class="event_image">
