ready for hosting

--- a/public/clubPage/clubPage.html
+++ b/public/clubPage/clubPage.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class = "container nav_container">
-            <img src="campus.png" alt="HTML5 Icon" style="width:100px;height:100px;">
+            <!-- <img src="campus.png" alt="HTML5 Icon" style="width:100px;height:100px;"> -->
 
             <a href="Home.html"><h4>CAMPUS CONNECT</h4></a>
             <ul class="nav_menu">
