--- a/public/home/Home.html
+++ b/public/home/Home.html
@@ -559,7 +559,7 @@ document.getElementById('login-btn').addEventListener('click', function() {
             localStorage.removeItem('isConvenor');
             // Redirect to the home page or perform any other action
             document.getElementById('chatLink').style.display = 'none';
-            window.location.href = 'HOME.html'; // Change this to your home page URL
+            window.location.href = 'Home.html'; // Change this to your home page URL
         });
 
         // Check if token exists in local storage
